--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux-persist": "^6.0.0",
+    "redux-persist-expire-transform": "^1.0.2",
     "redux-thunk": "^2.4.1"
   },
   "scripts": {
