--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
+    "react-paginate": "^8.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
