--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.24.0",
     "daisyui": "^1.20.1",
+    "i18next": "^21.6.6",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
+    "react-i18next": "^11.15.3",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
