--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
     "react-paginate": "^8.1.0",
