--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "daisyui": "^1.20.1",
     "lodash": "^4.17.21",
+    "pure-react-carousel": "^1.27.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
