--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.22.5",
     "react-hot-toast": "^2.1.1",
-    "react-paginate": "^8.1.0",
     "react-i18next": "^11.15.3",
+    "react-paginate": "^8.1.0",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-spinners": "^0.11.0",
     "redux-persist": "^6.0.0",
     "redux-persist-expire-transform": "^1.0.2",
     "redux-thunk": "^2.4.1"
